test: 같은 모양의 레시피 테스트를 ParameterizedTest 로 통합하고 가독성 개선
- RuntimeMigrationRiskTests, CopyJacksonAnnotationsToAccessorsTests, FindSpyStubbingThroughCachingProxyTests, DisambiguateRetryableExceptionNullTests 를 시나리오 설명이 붙은 MethodSource 로 통합
- UpstreamStepsUpToDateTests 를 생성 파일별 ParameterizedTest 로 통합
- DeclareUsedDependencyTests 의 반복되는 결과 검증을 expect 헬퍼로 빼고 전체 이름 참조를 import 로 정리